--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -123,7 +123,9 @@
   "text-product": "Product",
   "text-products": "Products",
   "text-add-to-cart": "Add To Cart",
+  "text-add-to-cart-special": "Special order",
   "text-view-cart": "View Cart",
+  "text-added-to-bag": "Added to the bag",
   "text-view-details": "View Details",
   "text-shipping": "Shipping",
   "text-shipping-address": "Shipping Address",
@@ -256,5 +258,31 @@
   "support-form": "Support form",
   "yes": "Yes",
   "no": "No",
-  "warningTextLocation": "You have products in your cart that will disappear if you change countries. Do you still want to change?"
+  "warningTextLocation": "You have products in your cart that will disappear if you change countries. Do you still want to change?",
+  "productDetails": "Product details",
+  "TecnicalData": "Technical data",
+  "additionalInformation": "Additional information",
+  "Reviews": "Reviews",
+  "weight": "Net weight (kg)",
+  "height": "Height (mm)",
+  "width": "Width (mm)",
+  "depth": "Depth (mm)",
+  "vedlängd": "Maximum log length (cm)",
+  "effekt": "Power",
+  "BurnerPower": "Burner power",
+  "color": "Color",
+  "colors": "Colors",
+  "black": "Black",
+  "white": "White",
+  "green": "Green",
+  "blue": "Blue",
+  "red": "Red",
+  "uppvärmningsyta": "Maximum heating area (m²)",
+  "skorstensanslutning": "Chimney connection",
+  "skorstensanslutningValue": "Top, Rear",
+  "Verkningsgrad": "Efficiency (%)",
+  "gasconsumption": "Gas consumption",
+  "preheatingtime": "Preheating time",
+  "floor": "Floor",
+  "downloadPdf": "Download PDF"
 }
