--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -123,7 +123,9 @@
   "text-product": "Produkt",
   "text-products": "Produkter",
   "text-add-to-cart": "Lägg till i varukorgen",
+  "text-add-to-cart-special": "Special beställning",
   "text-view-cart": "Till kundvagn",
+  "text-added-to-bag": "Tillagd i kundvagnen",
   "text-view-details": "Visa detaljer",
   "text-shipping": "Frakt",
   "text-shipping-address": "Leveransadress",
@@ -256,5 +258,30 @@
   "support-form": "Support formulär",
   "yes": "Ja",
   "no": "Nej",
-  "warningTextLocation": "Du har produkter i varukorgen som kommer försvinna om du byter land, vill du byta ändå?"
+  "warningTextLocation": "Du har produkter i varukorgen som kommer försvinna om du byter land, vill du byta ändå?",
+  "productDetails": "Produkt detaljer",
+  "TecnicalData": "Teknisk data",
+  "Reviews": "Recensioner",
+  "weight": "Nettovikt (kg)",
+  "height": "Höjd (mm)",
+  "width": "Bredd (mm)",
+  "depth": "Djup (mm)",
+  "vedlängd": "Maximal vedlängd (cm)",
+  "effekt": "Effekt(W)",
+  "BurnerPower": "Brännar effekt",
+  "color": "Färg",
+  "colors": "Färger",
+  "black": "Svart",
+  "white": "Vit",
+  "green": "Grön",
+  "blue": "Blå",
+  "red": "Röd",
+  "uppvärmningsyta": "Maximal uppvärmningsyta (m²)",
+  "skorstensanslutning": "Skorstensanslutning",
+  "skorstensanslutningValue": "Upptill, Bak",
+  "Verkningsgrad": "Verkningsgrad (%)",
+  "gasconsumption": "Gaskonsumtion",
+  "preheatingtime": "Förvärmningstid",
+  "floor": "Bakyta",
+  "downloadPdf": "Ladda ner PDF"
 }
