--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -7,6 +7,8 @@
   "varmepump": "Värmepumpar",
   "golvvarme": "Golvvärme",
   "air-condition": "Air condition",
+  "pizza-ugn": "Pizzaugn",
+  "portabel": "Portabel",
   "menu-hus-vitvaror": "Vitvaror",
   "menu-hus-vitvaror-kyl": "Kyl",
   "menu-hus-vitvaror-frys": "Frys",
