--- a/public/locales/en/faq.json
+++ b/public/locales/en/faq.json
@@ -1,10 +1,10 @@
 {
-  "faq-one-title": "How to contact with Customer Service?",
-  "faq-one-content": "Our Customer Experience Team is available 7 days a week and we offer 2 ways to get in contact.Email and Chat . We try to reply quickly, so you need not to wait too long for a response!.",
-  "faq-two-title": "App installation failed, how to update system information?",
-  "faq-two-content": "Please read the documentation carefully . We also have some online video tutorials regarding this issue . If the problem remains, Please Open a ticket in the support forum",
-  "faq-three-title": "Website response taking time, how to improve?",
-  "faq-three-content": "At first, Please check your internet connection . We also have some online video tutorials regarding this issue . If the problem remains, Please Open a ticket in the support forum.",
-  "faq-four-title": "How do I create an account?",
-  "faq-four-content": "If you want to open an account for personal use you can do it over the phone or online. Opening an account online should only take a few minutes."
+  "faq-one-title": "How do I place an order?",
+  "faq-one-content": "To place an order, select the product you wish to purchase and click 'Add to Cart'. Then go to the cart and follow the steps to complete the purchase.",
+  "faq-two-title": "Can I change or cancel my order?",
+  "faq-two-content": "You can change or cancel your order within 24 hours of placing it. Contact our customer service for assistance.",
+  "faq-three-title": "What payment methods are accepted?",
+  "faq-three-content": "We accept credit cards and Klarna.",
+  "faq-four-title": "What should I do if I receive the wrong item or a defective product?",
+  "faq-four-content": "If you have received the wrong or a defective product, contact our customer service immediately for assistance with a return or exchange."
 }
