--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -269,6 +269,27 @@
   "depth": "Depth (mm)",
   "vedlängd": "Maximum log length (cm)",
   "effekt": "Power",
+  "voltage": "Spänning (V)",
+  "powerConsumption": "Energiförbrukning (W)",
+  "current": "Strömstyrka (A)",
+  "frequency": "Frekvens (Hz)",
+  "material": "Material",
+  "capacity": "Kapacitet (liter)",
+  "batteryLife": "Batteritid (timmar)",
+  "noiseLevel": "Ljudnivå (dB)",
+  "IPRating": "IP-klassificering",
+  "weightCapacity": "Maxviktkapacitet (kg)",
+  "operatingTemperature": "Driftstemperatur (°C)",
+  "storageTemperature": "Förvaringstemperatur (°C)",
+  "humidity": "Luftfuktighet (%)",
+  "colorTemperature": "Färgtemperatur (K)",
+  "lumen": "Ljusstyrka (lm)",
+  "rotationSpeed": "Rotationshastighet (RPM)",
+  "waterPressure": "Vattentryck (bar)",
+  "fuelType": "Bränsletyp",
+  "airflow": "Luftflöde (m³/h)",
+  "installationType": "Installationstyp",
+  "energyClass": "Energieffektivitet (klass)",
   "BurnerPower": "Burner power",
   "color": "Color",
   "colors": "Colors",
