--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -5,6 +5,7 @@
   "menu-demos": "Demos",
   "menu-modern": "Modern",
   "menu-standard": "Standard",
+  "pizza-ugn": "Pizzaugn",
   "menu-minimal": "Minimal",
   "menu-vintage": "Vintage",
   "menu-classic": "Classic",
