--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -262,12 +262,33 @@
   "productDetails": "Produkt detaljer",
   "TecnicalData": "Teknisk data",
   "Reviews": "Recensioner",
-  "weight": "Nettovikt (kg)",
+  "weight": "Nettovikt (g)",
   "height": "Höjd (mm)",
   "width": "Bredd (mm)",
   "depth": "Djup (mm)",
   "vedlängd": "Maximal vedlängd (cm)",
   "effekt": "Effekt(W)",
+  "voltage": "Spänning (V)",
+  "powerConsumption": "Energiförbrukning (W)",
+  "current": "Strömstyrka (A)",
+  "frequency": "Frekvens (Hz)",
+  "material": "Material",
+  "capacity": "Kapacitet (liter)",
+  "batteryLife": "Batteritid (timmar)",
+  "noiseLevel": "Ljudnivå (dB)",
+  "IPRating": "IP-klassificering",
+  "weightCapacity": "Maxviktkapacitet (kg)",
+  "operatingTemperature": "Driftstemperatur (°C)",
+  "storageTemperature": "Förvaringstemperatur (°C)",
+  "humidity": "Luftfuktighet (%)",
+  "colorTemperature": "Färgtemperatur (K)",
+  "lumen": "Ljusstyrka (lm)",
+  "rotationSpeed": "Rotationshastighet (RPM)",
+  "waterPressure": "Vattentryck (bar)",
+  "fuelType": "Bränsletyp",
+  "airflow": "Luftflöde (m³/h)",
+  "installationType": "Installationstyp",
+  "energyClass": "Energieffektivitet (klass)",
   "BurnerPower": "Brännar effekt",
   "color": "Färg",
   "colors": "Färger",
