--- a/public/locales/en/footer.json
+++ b/public/locales/en/footer.json
@@ -13,8 +13,8 @@
   "link-youtube": "Youtube",
   "link-contact-us": "Contact Us",
   "link-email": "info@nätbutiken.ax",
-  "link-email-two": "example@email.com",
-  "link-phone": "Call us: +1 254 568-5479",
+  "link-email-two": "info@nätbutiken.ax",
+  "link-phone": "Call us: +358 (0)18 14554",
   "link-support-center": "Support Center",
   "link-customer-support": "Customer Support",
   "link-about-us": "About Us",
@@ -26,9 +26,9 @@
   "link-terms": "Terms & conditions",
   "link-return-policy": "Return Policy",
   "link-site-map": "Site Map",
-  "link-men-wear": "Men's Wear",
-  "link-women-wear": "Women's Wear",
-  "link-kids-wear": "Kid's Wear",
+  "link-kranar": "Kranar",
+  "link-pizza": "Pizzaugn",
+  "link-braskamin": "Braskamin",
   "link-sports-wear": "Sports Wear",
   "payment-master-card": "Master Card",
   "payment-visa": "Visa",
