--- a/public/locales/se/footer.json
+++ b/public/locales/se/footer.json
@@ -12,9 +12,9 @@
   "link-facebook": "Facebook",
   "link-youtube": "Youtube",
   "link-contact-us": "Kontakta oss",
-  "link-email": "dinexempel@email.com",
-  "link-email-two": "exempel@email.com",
-  "link-phone": "Ring oss: +1 254 568-5479",
+  "link-email": "info@nätbutiken.ax",
+  "link-email-two": "info@nätbutiken.ax",
+  "link-phone": "Ring oss: +358 (0)18 14554",
   "link-support-center": "Supportcenter",
   "link-customer-support": "Kundsupport",
   "link-about-us": "Om oss",
@@ -26,7 +26,7 @@
   "link-terms": "GDPR & Cookies",
   "link-return-policy": "Returpolicy",
   "link-site-map": "Webbplatskarta",
-  "link-men-wear": "Herrkläder",
-  "link-women-wear": "Damkläder",
-  "link-kids-wear": "Barnkläder"
+  "link-kranar": "Kranar",
+  "link-pizza": "Pizzaugn",
+  "link-braskamin": "Braskamin"
 }
