--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -86,6 +86,7 @@
   "text-page-privacy-policy": "Privacy Policy",
   "text-page-faq": "Frequently Asked Questions",
   "text-page-support": "Support",
+  "text-page-about": "About",
   "text-subscribe-heading": "Get Expert Tips In Your Inbox",
   "text-subscribe-description": "Subscribe to our newsletter and stay updated.",
   "text-banner-thumbnail": "Banner Thumbnail",
@@ -240,6 +241,7 @@
   "button-send-message": "Send Message",
   "button-submit": "Submit",
   "button-view": "view",
+  "about": "Welcome to Åland's Online Store – your go-to destination for easy shopping. Whether you live on Åland, are planning a visit, or simply want to enjoy our exclusive goods, we have something for everyone. Here, you'll find a wide range of products, from local delicacies and crafts to electronics and fashion. Our goal is to combine the convenience of online shopping with the best that Åland has to offer. Shop easily with us – we deliver to both Åland and the mainland.",
   "button-save": "Save",
   "button-app-store": "App Store",
   "button-play-store": "Play Store",
@@ -249,6 +251,8 @@
   "button-view-collection": "View Collection",
   "button-chat-services": "Chat With Member Services",
   "tab-all-collection": "All Collection",
+  "nya-produkter": "Nya produkter",
+  "sommar-rea": "Sommar rea",
   "tab-mens-collection": "Mens Collection",
   "tab-womens-collection": "Womens Collection",
   "tab-kids-collection": "Kids Collection",
