--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -86,6 +86,7 @@
   "text-page-privacy-policy": "Privacy Policy",
   "text-page-faq": "Vanliga frågor och svar",
   "text-page-support": "Vad vill du ha hjälp med?",
+  "text-page-about": "Om oss",
   "text-subscribe-heading": "Få experttips i din inkorg",
   "text-subscribe-description": "Prenumerera på vårt nyhetsbrev och håll dig uppdaterad.",
   "text-banner-thumbnail": "Banner Thumbnail",
@@ -195,7 +196,7 @@
   "text-best-sellers": "Best Sellers",
   "text-casual-wear": "Casual Wear",
   "text-items": "produkter",
-  "text-sorting-options": "Sorting Options",
+  "text-sorting-options": "Sorteringsalternativ",
   "text-newest": "Newest",
   "text-testimonial": "Testimonial",
   "text-popularity": "Popularity",
@@ -213,7 +214,7 @@
   "text-newsletter-subtitle": "Do subscribe the ChawkBazar to receive updates on new arrivals, special offers & our promotions",
   "text-collection-list": "Collection List",
   "text-collections": "Collections",
-  "text-accept-cookies": "Accept cookies",
+  "text-accept-cookies": "Godkänn cookies",
   "text-more-info": "More Info",
   "text-website": "Website",
   "text-ratings": "Ratings",
@@ -223,7 +224,7 @@
   "text-new": "New",
   "text-super-shop": "Super Shops Near You",
   "text-call-now": "Call Now",
-  "text-cookies-title": "This site uses cookies to improve your experience. By clicking, you agree to our Privacy Policy.",
+  "text-cookies-title": "Sajten använder cookies för att förbättra din upplevelse. Genom att klicka godkänner du vår integritetspolicy.",
   "text-top-brands-deal": "Top Brands Deal",
   "text-upto": "Up To",
   "text-60%-discount": "60% off on brands",
@@ -240,6 +241,7 @@
   "button-send-message": "Skicka Meddelande",
   "button-submit": "Submit",
   "button-view": "view",
+  "about": "Välkommen till Ålands Nätbutik – din destination för att enkelt handla produkter. Oavsett om du bor på Åland, planerar ett besök eller bara vill ta del av våra exklusiva varor, har vi något för alla. Här hittar du ett brett sortiment av produkter, från lokala delikatesser och hantverk till teknik och mode. Vår ambition är att förena bekvämligheten av nätshopping med det bästa Åland har att erbjuda. Handla enkelt och smidigt hos oss – vi levererar både till Åland och fastlandet.",
   "button-save": "Save",
   "button-app-store": "App Store",
   "button-play-store": "Play Store",
@@ -249,6 +251,8 @@
   "button-view-collection": "View Collection",
   "button-chat-services": "Prata med våran support",
   "tab-all-collection": "All Collection",
+  "nya-produkter": "Nya produkter",
+  "sommar-rea": "Sommar rea",
   "tab-mens-collection": "Mens Collection",
   "tab-womens-collection": "Womens Collection",
   "tab-kids-collection": "Kids Collection",
