--- a/public/locales/se/privacy.json
+++ b/public/locales/se/privacy.json
@@ -10,5 +10,5 @@
   "privacy-five-title": "Klagomål",
   "privacy-five-content": "<p>Om du tror att din integritet har kränkts eller om du har ett klagomål om hur vi har hanterat din personliga information, vänligen kontakta oss skriftligt. Vi kommer att svara inom en rimlig period (vanligtvis inom 30 dagar).</p>",
   "privacy-six-title": "Ägare och Datakontrollant",
-  "privacy-six-content": "<p>Nätbutiken<br>6 Strandgatan,<br>22100 Mariehamn<br>Åland<br><br>E-post: demo@demo.ax</p>"
+  "privacy-six-content": "<p>Nätbutiken<br>4 Strandgatan,<br>22100 Mariehamn<br>Åland<br><br>E-post: info@nätbutiken.axx</p>"
 }
