--- a/public/locales/en/terms.json
+++ b/public/locales/en/terms.json
@@ -10,5 +10,5 @@
   "terms-five-title": "Complaints",
   "terms-five-content": "<p>If you believe your privacy has been breached or you have a complaint about how we have handled your personal information, please contact us in writing.  We will respond within a reasonable period (usually within 30 days).</p>",
   "terms-six-title": "Owner and Data Controller",
-  "terms-six-content": "<p>Nätbutiken AB<br>Strandgatan 4,<br>22100 Mariehamn<br>Åland<br><br>Email: info@nätbutiken.ax</p>"
+  "terms-six-content": "<p>Nätbutiken AB<br>4 Strandgatan,<br>22100 Mariehamn<br>Åland<br><br>Email: info@nätbutiken.ax</p>"
 }
