--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -54,8 +54,8 @@
   "error-sub-heading": "We can't find the page you're looking for",
   "support-heading": "Talk To A Real Person",
   "support-sub-heading": "Are you on the fence? Have a question? Need a recommendation? Member Services is always here to help. Send us a message.",
-  "app-heading": "The ChawkBazar App",
-  "app-sub-heading": "<span> Share Your <strong>Ideas</strong> &amp; Shop Endless <strong>Inspiration</strong> </span>",
+  "app-heading": "Nätbutiken",
+  "app-sub-heading": "<span> Upptäck nya <strong>Idéer</strong> & Handla lokal <strong>Inspiration</strong> direkt från vår butik </span>",
   "collection-title-one": "New Spring Knits",
   "collection-description-one": "Endlessly versatile new styles that say yes to spring. The season’s looking bright.",
   "collection-title-two": "Down To The Core",
@@ -251,8 +251,9 @@
   "button-view-collection": "View Collection",
   "button-chat-services": "Chat With Member Services",
   "tab-all-collection": "All Collection",
-  "nya-produkter": "Nya produkter",
-  "sommar-rea": "Sommar rea",
+  "nya-produkter": "New products",
+  "sommar-rea": "Summer sale",
+  "host-rea": "Autum sale",
   "tab-mens-collection": "Mens Collection",
   "tab-womens-collection": "Womens Collection",
   "tab-kids-collection": "Kids Collection",
