--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -55,7 +55,7 @@
   "support-heading": "Prata med oss i supportern",
   "support-sub-heading": "Är du osäker? Har du en fråga? Behöver du ett rekommendation? Medlemsservice är alltid här för att hjälpa till. Skicka oss ett meddelande.",
   "app-heading": "Nätbutiken",
-  "app-sub-heading": "<span> Share Your <strong>Ideas</strong> &amp; Shop Endless <strong>Inspiration</strong> </span>",
+  "app-sub-heading": "<span> Upptäck nya <strong>Produkter</strong> & Handla enkelt direkt från vår butik </span>",
   "collection-title-one": "New Spring Knits",
   "collection-description-one": "Endlessly versatile new styles that say yes to spring. The season’s looking bright.",
   "collection-title-two": "Down To The Core",
@@ -253,6 +253,7 @@
   "tab-all-collection": "All Collection",
   "nya-produkter": "Nya produkter",
   "sommar-rea": "Sommar rea",
+  "host-rea": "Höst rea",
   "tab-mens-collection": "Mens Collection",
   "tab-womens-collection": "Womens Collection",
   "tab-kids-collection": "Kids Collection",
