--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -83,6 +83,7 @@
   "text-page-contact-us": "Frågor? Kontakta oss!",
   "text-page-my-account": "Mitt konto",
   "text-page-terms-of-service": "Användarvillkor",
+  "text-page-returns": "Returrätt & Ångerrätt",
   "text-page-privacy-policy": "Privacy Policy",
   "text-page-faq": "Vanliga frågor och svar",
   "text-page-support": "Vad vill du ha hjälp med?",
@@ -197,11 +198,11 @@
   "text-casual-wear": "Casual Wear",
   "text-items": "produkter",
   "text-sorting-options": "Sorteringsalternativ",
-  "text-newest": "Newest",
+  "text-newest": "Senaste",
   "text-testimonial": "Testimonial",
-  "text-popularity": "Popularity",
-  "text-price-low-high": "Price: low to high",
-  "text-price-high-low": "Price: high to low",
+  "text-popularity": "Popularitet",
+  "text-price-low-high": "Pris: lågt till högt",
+  "text-price-high-low": "Pris: högt till lågt",
   "text-instagram": "Instagram",
   "text-twitter": "Twitter",
   "text-facebook": "Facebook",
@@ -235,7 +236,7 @@
   "login-helper": "Login with your email & password",
   "registration-helper": "By signing up, you agree to our",
   "forgot-password-helper": "We'll send you a link to reset your password",
-  "button-load-more": "Load More",
+  "button-load-more": "Ladda fler produkter",
   "button-go-home": "Tillbaka till startsidan",
   "button-place-order": "Betala din order",
   "button-send-message": "Skicka Meddelande",
