--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -83,6 +83,7 @@
   "text-page-contact-us": "Questions? Get in Touch!",
   "text-page-my-account": "My Account",
   "text-page-terms-of-service": "Terms of Service",
+  "text-page-returns": "Returrätt & Ångerrätt",
   "text-page-privacy-policy": "Privacy Policy",
   "text-page-faq": "Frequently Asked Questions",
   "text-page-support": "Support",
