update img and ad name

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,7 +6,7 @@
     },
     {
       "mobile": "/assets/images/banner/masonry/sport-mobile-top.jpg",
-      "desktop": "/assets/images/banner/masonry/sport-banner-top.jps"
+      "desktop": "/assets/images/banner/masonry/sport-banner-top.jpg"
     },
     {
       "mobile": "/assets/images/banner/masonry/fritid-mobile-banner.jpg",
