--- a/public/locales/se/terms.json
+++ b/public/locales/se/terms.json
@@ -10,5 +10,5 @@
   "terms-five-title": "Klagomål",
   "terms-five-content": "<p>Om du anser att din integritet har kränkts eller om du har ett klagomål om hur vi har hanterat din personliga information, vänligen kontakta oss skriftligen. Vi kommer att svara inom en rimlig tidsperiod (vanligtvis inom 30 dagar).</p>",
   "terms-six-title": "Ägare och Datakontrollant",
-  "terms-six-content": "<p>Nätbutiken AB<br>4 Strandgatan,<br>22100 Mariehamn<br>Åland<br><br>Email: info@nätbutiken.ax</p>"
+  "terms-six-content": "<p>Nätbutiken.ax (En del av Hus& fritidscenter Åland Ab)<br>4 Strandgatan,<br>22100 Mariehamn<br>Åland<br><br>Email: info@nätbutiken.ax</p>"
 }
