--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -9,9 +9,31 @@
   "air-condition": "Air condition",
   "pizza-ugn": "Pizzaugn",
   "portabel": "Portabel",
-  "menu-hus-vitvaror": "Vitvaror",
-  "menu-hus-vitvaror-kyl": "Kyl",
-  "menu-hus-vitvaror-frys": "Frys",
+  "energi": "Enegri",
+  "solceller": "Solceller",
+  "batterier": "Batterier",
+  "el-bils-laddare": "Elbilsladdare",
+  "solfangare": "Solfangare",
+  "koksapparater": "Köksapparater",
+  "kaffe-maskiner": "Kaffemaskiner",
+  "mobler-inredning": "Möbler & inredning",
+  "soffor": "Soffor",
+  "bord": "Bord",
+  "stolar": "Stolar",
+  "tv-mobler": "TV Möbler",
+  "speglar": "Speglar",
+  "smart-hem": "Smarta hem",
+  "temperatur-givare": "Temperatur",
+  "larm": "Larm",
+  "gateways": "Gsateways",
+  "verktyg-maskiner": "Verktyg & maskiner",
+  "skruvdragare": "Skruvdragare",
+  "damsugare": "Damsugare",
+  "maleri": "Måleri",
+  "vitvaror": "Vitvaror",
+  "kyl": "Kyl",
+  "frys": "Frys",
+  "vin-kyl": "Vinkyl",
   "menu-fritid-main": "Fritid",
   "menu-tradgard-main": "Trädgård",
   "menu-demos": "Demos",
