--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -1,4 +1,92 @@
 {
+  "hushall": "Household",
+  "braskaminer": "Wood-burning Stoves",
+  "taljstenskaminer": "Soapstone Stoves",
+  "kaminer": "Stoves",
+  "eldstader/murspis": "Fireplaces",
+  "gjutjarnskaminer": "Cast Iron Stoves",
+  "varmepumpar": "Heat Pumps",
+  "luftvarmepumpar": "Air Heat Pumps",
+  "franluftvarmepump": "Exhaust Air Heat Pump",
+  "bergvarmepumpar": "Geothermal Heat Pumps",
+  "jordvarmepump": "Ground Source Heat Pump",
+  "AC": "AC",
+  "ventilation": "Ventilation",
+  "ftx-aggregat": "FTX Units",
+  "mekaniskventilation": "Mechanical Ventilation",
+  "friflode-sjalvdrag": "Natural Ventilation",
+  "golvvärme": "Underfloor Heating",
+  "vvs": "Plumbing",
+  "kranar/blandare": "Faucets/Mixers",
+  "handfat/badkar": "Sinks/Bathtubs",
+  "spabad/badtunnor": "Hot Tubs",
+  "toastolar": "Toilets",
+  "sol/lagring/elbil": "Solar/Storage/Electric Cars",
+  "solsystem": "Solar Systems",
+  "Batterier": "Batteries",
+  "elbilsladdning": "Electric Car Charging",
+  "byggvaror": "Building Materials",
+  "fonster": "Windows",
+  "takstegar": "Roof Ladders",
+  "inredning": "Interior",
+  "koksinredning": "Kitchen Interior",
+  "badrumsinredning": "Bathroom Interior",
+  "garderob/forvaring": "Closet/Storage",
+  "hallinredning": "Hallway Interior",
+  "vardagsrumsinrening": "Living Room Interior",
+  "Vitvaror": "White Goods",
+  "kylar": "Refrigerators",
+  "frysar": "Freezers",
+  "vinkylar": "Wine Coolers",
+  "diskmaskiner": "Dishwashers",
+  "frysboxar": "Freezer Chests",
+  "kombineradkyl/frys": "Combined Refrigerator/Freezer",
+  "flaktar": "Fans",
+  "tvattmaskiner": "Washing Machines",
+  "torktumlare": "Dryers",
+  "microugn": "Microwave Oven",
+  "hallar": "Hallways",
+  "ugnar": "Ovens",
+  "bastu": "Sauna",
+  "elektiskt/bastupriser": "Electric Sauna Heaters",
+  "vedeldade/bastuspisar": "Wood-fired Sauna Heaters",
+  "tillbehor": "Accessories",
+  "fritid": "Leisure",
+  "bastu-inredning": "Sauna Interior",
+  "bastu-stugor": "Sauna Cabins",
+  "forfon/atv": "Headlights/ATV",
+  "atv/utv": "ATV/UTV",
+  "snoskoter": "Snowmobile",
+  "elsparkcyklar": "Electric Scooters",
+  "elcyklar": "Electric Bicycles",
+  "cyklar": "Bicycles",
+  "mopeder": "Mopeds",
+  "mopedbilar": "Moped Cars",
+  "batar/marin": "Boats/Marine",
+  "plotter/ekolod": "Plotters/Fish Finders",
+  "radar": "Radar",
+  "roddbat": "Rowboat",
+  "jetskis": "Jetskis",
+  "bryggor": "Docks",
+  "flytvastar": "Life Jackets",
+  "fiske": "Fishing",
+  "fiskespon": "Fishing Rods",
+  "fiskerulle": "Fishing Reels",
+  "fiskedrag": "Fishing Lures",
+  "ekolod": "Fish Finders",
+  "trollingmotor": "Trolling Motor",
+  "fiskeklader": "Fishing Clothes",
+  "sport": "Sport",
+  "golf": "Golf",
+  "golfbollar": "Golf Balls",
+  "golfklubbor": "Golf Clubs",
+  "utrustning": "Equipment",
+  "golfklader": "Golf Clothes",
+  "sportklader": "Sports Clothes",
+  "traningsklader": "Training Clothes",
+  "alpin": "Alpine",
+  "langdskidor": "Cross-country Skis",
+  "skidor": "Skis",
   "menu-hus-main": "Hus",
   "menu-fritid-main": "Outdoor",
   "menu-tradgard-main": "Garden",
