--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -1,39 +1,92 @@
 {
-  "hus": "Hus",
-  "kok": "Kök",
-  "kranar": "Kranar",
-  "varme-kyla": "Värme/kyla",
-  "braskamin": "Braskaminer",
-  "varmepump": "Värmepumpar",
-  "golvvarme": "Golvvärme",
-  "air-condition": "Air condition",
-  "pizza-ugn": "Pizzaugn",
-  "portabel": "Portabel",
-  "energi": "Enegri",
-  "solceller": "Solceller",
-  "batterier": "Batterier",
-  "el-bils-laddare": "Elbilsladdare",
-  "solfangare": "Solfangare",
-  "koksapparater": "Köksapparater",
-  "kaffe-maskiner": "Kaffemaskiner",
-  "mobler-inredning": "Möbler & inredning",
-  "soffor": "Soffor",
-  "bord": "Bord",
-  "stolar": "Stolar",
-  "tv-mobler": "TV Möbler",
-  "speglar": "Speglar",
-  "smart-hem": "Smarta hem",
-  "temperatur-givare": "Temperatur",
-  "larm": "Larm",
-  "gateways": "Gsateways",
-  "verktyg-maskiner": "Verktyg & maskiner",
-  "skruvdragare": "Skruvdragare",
-  "damsugare": "Damsugare",
-  "maleri": "Måleri",
-  "vitvaror": "Vitvaror",
-  "kyl": "Kyl",
-  "frys": "Frys",
-  "vin-kyl": "Vinkyl",
+  "hushall": "Hushåll",
+  "braskaminer": "Braskaminer",
+  "taljstenskaminer": "Täljstenskaminer",
+  "kaminer": "Kaminer",
+  "eldstader/murspis": "Eldstäder/Murspis",
+  "gjutjarnskaminer": "Gjutjärnskaminer",
+  "varmepumpar": "Värmepumpar",
+  "luftvarmepumpar": "Luftvärmepumpar",
+  "franluftvarmepump": "Frånluftsvärmepump",
+  "bergvarmepumpar": "Bergvärmepumpar",
+  "jordvarmepump": "Jordvärmepump",
+  "AC": "AC",
+  "ventilation": "Ventilation",
+  "ftx-aggregat": "FTX-aggregat",
+  "mekaniskventilation": "Mekanisk Ventilation",
+  "friflode-sjalvdrag": "Friflöde/Självdrag",
+  "golvvärme": "Golvvärme",
+  "vvs": "VVS",
+  "kranar/blandare": "Kranar/Blandare",
+  "handfat/badkar": "Handfat/Badkar",
+  "spabad/badtunnor": "Spabad/Badtunnor",
+  "toastolar": "Toalettstolar",
+  "sol/lagring/elbil": "Sol/Lagring/Elbil",
+  "solsystem": "Solsystem",
+  "Batterier": "Batterier",
+  "elbilsladdning": "Elbilsladdning",
+  "byggvaror": "Byggvaror",
+  "fonster": "Fönster",
+  "takstegar": "Takstegar",
+  "inredning": "Inredning",
+  "koksinredning": "Köksinredning",
+  "badrumsinredning": "Badrumsinredning",
+  "garderob/forvaring": "Garderob/Förvaring",
+  "hallinredning": "Hallinredning",
+  "vardagsrumsinrening": "Vardagsrumsinredning",
+  "Vitvaror": "Vitvaror",
+  "kylar": "Kylar",
+  "frysar": "Frysar",
+  "vinkylar": "Vinkylar",
+  "diskmaskiner": "Diskmaskiner",
+  "frysboxar": "Frysboxar",
+  "kombineradkyl/frys": "Kombinerad Kyl/Frys",
+  "flaktar": "Fläktar",
+  "tvattmaskiner": "Tvättmaskiner",
+  "torktumlare": "Torktumlare",
+  "microugn": "Mikrovågsugn",
+  "hallar": "Hallar",
+  "ugnar": "Ugnar",
+  "bastu": "Bastu",
+  "elektiskt/bastupriser": "Elektriskt/Bastupriser",
+  "vedeldade/bastuspisar": "Vedeldade/Bastuspisar",
+  "tillbehor": "Tillbehör",
+  "fritid": "Fritid",
+  "bastu-inredning": "Bastu-Inredning",
+  "bastu-stugor": "Bastu-Stugor",
+  "forfon/atv": "Förfön/ATV",
+  "atv/utv": "ATV/UTV",
+  "snoskoter": "Snöskoter",
+  "elsparkcyklar": "Elsparkcyklar",
+  "elcyklar": "Elcyklar",
+  "cyklar": "Cyklar",
+  "mopeder": "Mopeder",
+  "mopedbilar": "Mopedbilar",
+  "batar/marin": "Båtar/Marin",
+  "plotter/ekolod": "Plotter/Ekolod",
+  "radar": "Radar",
+  "roddbat": "Rodd Båt",
+  "jetskis": "Jetskis",
+  "bryggor": "Bryggor",
+  "flytvastar": "Flytvästar",
+  "fiske": "Fiske",
+  "fiskespon": "Fiskespön",
+  "fiskerulle": "Fiskerullar",
+  "fiskedrag": "Fiskedrag",
+  "ekolod": "Ekolod",
+  "trollingmotor": "Trollingmotor",
+  "fiskeklader": "Fiskekläder",
+  "sport": "Sport",
+  "golf": "Golf",
+  "golfbollar": "Golfbollar",
+  "golfklubbor": "Golfklubbor",
+  "utrustning": "Utrustning",
+  "golfklader": "Golfkläder",
+  "sportklader": "Sportkläder",
+  "traningsklader": "Träningskläder",
+  "alpin": "Alpin",
+  "langdskidor": "Längdskidor",
+  "skidor": "Skidor",
   "menu-fritid-main": "Fritid",
   "menu-tradgard-main": "Trädgård",
   "menu-demos": "Demos",
