--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -49,6 +49,7 @@
       "desktop": "/assets/images/banner/myresjohusBannermyresjohusbanner.jpg"
     }
   ],
+  "products": "produkter",
   "productDesc": "se",
   "error-heading": "Det ser ut som du har hamnat fel",
   "error-sub-heading": "Vi kan inte hitta den sida du letar efter",
