--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -243,7 +243,7 @@
   "button-send-message": "Skicka Meddelande",
   "button-submit": "Submit",
   "button-view": "view",
-  "about": "Välkommen till Ålands Nätbutik – din destination för att enkelt handla produkter. Oavsett om du bor på Åland, planerar ett besök eller bara vill ta del av våra exklusiva varor, har vi något för alla. Här hittar du ett brett sortiment av produkter, från lokala delikatesser och hantverk till teknik och mode. Vår ambition är att förena bekvämligheten av nätshopping med det bästa Åland har att erbjuda. Handla enkelt och smidigt hos oss – vi levererar både till Åland och fastlandet.",
+  "about": "Välkommen till Ålands Nätbutik – din destination för att enkelt handla produkter. Oavsett om du bor på Åland, planerar ett besök eller bara vill ta del av våra exklusiva varor, har vi något för alla. Här hittar du ett brett sortiment av produkter, från lokala delikatesser och hantverk till teknik och mode. Vår ambition är att förena bekvämligheten av nätshopping med det bästa Åland har att erbjuda. Handla enkelt och smidigt hos oss – vi levererar till alla hushåll på Åland.",
   "button-save": "Save",
   "button-app-store": "App Store",
   "button-play-store": "Play Store",
