--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -135,11 +135,11 @@
   "text-sub-total": "Subtotal",
   "text-total": "Total",
   "text-order-number": "Order number",
-  "text-date": "Date",
+  "text-date": "Datum",
   "text-note": "Note",
   "text-map": "Karta",
-  "text-payment-method": "Payment method",
-  "text-free": "Free",
+  "text-payment-method": "Betalnings metod",
+  "text-free": "Gratis",
   "text-close": "Stäng",
   "text-or": "Or",
   "text-and": "and",
@@ -164,7 +164,7 @@
   "text-phone-details": "+358 18 14554",
   "text-order-received": "Thank you. Your order has been received.",
   "text-pay-cash": "Pay with cash upon delivery.",
-  "text-order-details": "Order details",
+  "text-order-details": "Order information",
   "text-details": "Details",
   "text-recent-orders": "recent orders",
   "text-discount": "Hundra nya varor just tillagda! Extra 20% rabatt på utvalda varor.",
@@ -234,6 +234,8 @@
   "text-trending-collection": "Trending Collection",
   "text-recently-view-products": "Recently View Products",
   "text-scroll-to-top": "Scroll to top",
+  "text-thank-you": "Tack för din beställning!",
+  "text-order-confirmed": "Order bekräftelse",
   "login-helper": "Login with your email & password",
   "registration-helper": "By signing up, you agree to our",
   "forgot-password-helper": "We'll send you a link to reset your password",
@@ -313,5 +315,7 @@
   "floor": "Bakyta",
   "downloadPdf": "Ladda ner PDF",
   "language": "Språk",
-  "location": "Plats"
+  "location": "Plats",
+  "quantity": "Antal",
+  "select_placeholder": "Välj..."
 }
