--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -305,7 +305,7 @@
   "white": "Vit",
   "green": "Grön",
   "blue": "Blå",
-  "red": "Röd",
+  "red": "RAJsing",
   "uppvärmningsyta": "Maximal uppvärmningsyta (m²)",
   "skorstensanslutning": "Skorstensanslutning",
   "skorstensanslutningValue": "Upptill, Bak",
