--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -87,7 +87,7 @@
   "alpin": "Alpine",
   "langdskidor": "Cross-country Skis",
   "skidor": "Skis",
-  "menu-hus-main": "Hus",
+  "menu-hus-main": "Hushåll",
   "menu-fritid-main": "Outdoor",
   "menu-tradgard-main": "Garden",
   "menu-demos": "Demos",
