--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -3,6 +3,8 @@
   "braskaminer": "Braskaminer",
   "taljstenskaminer": "Täljstenskaminer",
   "kaminer": "Kaminer",
+  "tillbehor-kaminer": "Tillbehör kaminer",
+  "tillbehor-taljstenskaminer": "Tillbehör Täljstenskaminer",
   "eldstader/murspis": "Eldstäder/Murspis",
   "gjutjarnskaminer": "Gjutjärnskaminer",
   "varmepumpar": "Värmepumpar",
