new product to cart and under construction

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -317,7 +317,7 @@
   "floor": "Floor",
   "downloadPdf": "Download PDF",
   "language": "Language",
-  "location": "Location",
+  "location": "Delivery",
   "quantity": "Quantity",
   "select_placeholder": "Select..."
 }
