--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -315,7 +315,7 @@
   "floor": "Bakyta",
   "downloadPdf": "Ladda ner PDF",
   "language": "Språk",
-  "location": "Plats",
+  "location": "Leverans till",
   "quantity": "Antal",
   "select_placeholder": "Välj..."
 }
