--- a/public/locales/se/menu.json
+++ b/public/locales/se/menu.json
@@ -1,5 +1,5 @@
 {
-  "hushall": "Hushåll",
+  "hushall": "Hus & Hem",
   "braskaminer": "Braskaminer",
   "taljstenskaminer": "Täljstenskaminer",
   "kaminer": "Kaminer",
