--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -308,6 +308,21 @@
   "green": "Green",
   "blue": "Blue",
   "red": "Red",
+  "yellow": "Yellow",
+  "orange": "Orange",
+  "purple": "Purple",
+  "pink": "Pink",
+  "brown": "Brown",
+  "gray": "Gray",
+  "beige": "Beige",
+  "turquoise": "Turquoise",
+  "gold": "Gold",
+  "silver": "Silver",
+  "navy": "Navy",
+  "teal": "Teal",
+  "lavender": "Lavender",
+  "burgundy": "Burgundy",
+  "mint": "Mint",
   "uppvärmningsyta": "Maximum heating area (m²)",
   "skorstensanslutning": "Chimney connection",
   "skorstensanslutningValue": "Top, Rear",
@@ -319,5 +334,7 @@
   "language": "Language",
   "location": "Delivery",
   "quantity": "Quantity",
-  "select_placeholder": "Select..."
+  "select_placeholder": "Select...",
+  "showing": "Showing",
+  "of": "of"
 }
