--- a/public/locales/se/common.json
+++ b/public/locales/se/common.json
@@ -305,7 +305,22 @@
   "white": "Vit",
   "green": "Grön",
   "blue": "Blå",
-  "red": "RAJsing",
+  "red": "Röd",
+  "yellow": "Gul",
+  "orange": "Orange",
+  "purple": "Lila",
+  "pink": "Rosa",
+  "brown": "Brun",
+  "gray": "Grå",
+  "beige": "Beige",
+  "turquoise": "Turkos",
+  "gold": "Guld",
+  "silver": "Silver",
+  "navy": "Marinblå",
+  "teal": "Blågrön",
+  "lavender": "Lavendel",
+  "burgundy": "Vinröd",
+  "mint": "Mintgrön",
   "uppvärmningsyta": "Maximal uppvärmningsyta (m²)",
   "skorstensanslutning": "Skorstensanslutning",
   "skorstensanslutningValue": "Upptill, Bak",
@@ -317,5 +332,7 @@
   "language": "Språk",
   "location": "Leverans till",
   "quantity": "Antal",
-  "select_placeholder": "Välj..."
+  "select_placeholder": "Välj...",
+  "showing": "Visar",
+  "of": "av"
 }
